--- a/iiitdsite/templates/iiitdsite/acad_dsai.html
+++ b/iiitdsite/templates/iiitdsite/acad_dsai.html
@@ -14,6 +14,11 @@
   The Program Educational Objectives of the BTech ECE program are to impart electronics and communication system thinking in preparing the graduates technically and professionally for IT careers, entrepreneurship, higher studies and research.
 </p>
 
+
+{% comment %} Buttons {% endcomment %}
+
+<div style="display: flex; gap:1rem; padding:1rem 0">
 <a href="{% url 'DSAI_curr' %}"><p><b>See the curriculum</b></p></a>
 
 <a href="{% url 'faculty' %}#dsai"><p><b>See the faculty</b></p></a>
+</div>
