--- a/iiitdsite/templates/iiitdsite/acad_ece.html
+++ b/iiitdsite/templates/iiitdsite/acad_ece.html
@@ -14,6 +14,10 @@
   The department is equipped with faculty members having specialization in VLSI, Speech Processing, MEMS and Communication.
 </p>
 
+{% comment %} Buttons {% endcomment %}
+
+<div style="display: flex; gap:1rem; padding:1rem 0">
 <a href="{% url 'ECE_curr' %}"><p><b>See the curriculum</b></p></a>
 
 <a href="{% url 'faculty' %}#ece"><p><b>See the faculty</b></p></a>
+</div>
