--- a/iiitdsite/templates/iiitdsite/footer.html
+++ b/iiitdsite/templates/iiitdsite/footer.html
@@ -60,6 +60,9 @@
                   <li><a href="{% url 'placements' %}">Placement Cell</a></li>
                   <li><a href="{% url 'gallery' %}">Gallery</a></li>
                   <li><a href="https://aims.iiitdwd.ac.in/aims/">Aims</a></li>
+                  <li>
+                    <a href="{% url 'nirf' %}"> NIRF </a>
+                  </li>
                 </ul>
               </div>
               
