--- a/iiitdsite/templates/iiitdsite/index.html
+++ b/iiitdsite/templates/iiitdsite/index.html
@@ -904,15 +904,15 @@
               <div class="main-menu">
                 <!-- main menu navbar start -->
                 <nav class="desktop-menu">
-                  <ul>
+                  <ul >
                     <li class="static">
-                      <a class="mainNav" href="{% url 'home' %}">Home </a>
+                      <a style="font-size:14px;" class="mainNav" href="{% url 'home' %}">Home </a>
                     </li>
                     <li class="static">
-                      <a class="mainNav" href="{% url 'about' %}">About</a>
+                      <a style="font-size:14px;" class="mainNav" href="{% url 'about' %}">About</a>
                     </li>
                     <li class="static">
-                      <a class="mainNav" href="{% url 'academics' %}">Academics <i class="fa fa-angle-down"></i></a>
+                      <a style="font-size:14px;" class="mainNav" href="{% url 'academics' %}">Academics <i class="fa fa-angle-down"></i></a>
                       <ul class="megamenu dropdown" style="transform: translateY(-1rem);">
                         <li class="mega-title">
                           <a href="#">Courses</a>
@@ -935,7 +935,9 @@
                         <li class="mega-title">
                           <a href="">Academic Information</a>
                           <ul>
-                            <li><a href={{acad_link.acad_cal.url}}>Academic Calendar</a></li>
+                            <li>
+                              <a href={{acad_link.acad_cal.url}}>Academic Calendar</a>
+                            </li>
                             <li>
                               <a href="{% url 'faculty' %}">Faculty</a>
                             </li>
@@ -965,7 +967,7 @@
                       </ul>
                     </li>
                     <li>
-                      <a class="mainNav">Admissions <i class="fa fa-angle-down"></i></a>
+                      <a style="font-size:14px;" class="mainNav">Admissions <i class="fa fa-angle-down"></i></a>
                       <ul class="dropdown">
                         <li>
                           <a href="{% url 'fees' %}"> Fees </a>
@@ -986,21 +988,21 @@
                     </li>
 
                     <li>
-                      <a class="mainNav">Administration <i class="fa fa-angle-down"></i></a>
+                      <a style="font-size:14px;" class="mainNav">Administration <i class="fa fa-angle-down"></i></a>
                       <ul class="dropdown">
 
                         <li>
                           <a href="{% url 'bog' %}"> Board of Governors </a>
                         </li>
+
                         <li>
                           <a href="{% url 'senate' %}"> Senate </a>
                         </li>
+
                         <li>
                           <a href="{% url 'ficommit' %}"> Financial Committee </a>
                         </li>
-                        <li>
-                          <a href="{% url 'faculty' %}"> Faculty </a>
-                        </li>
+                
                         <li>
                           <a href="{% url 'staff' %}"> Staff </a>
                         </li>
@@ -1009,29 +1011,37 @@
                     </li>
 
                     <li>
-                      <a class="mainNav" href="{% url 'campus' %}">Campus <i class="fa fa-angle-down"></i></a>
+                      <a style="font-size:14px;" class="mainNav" href="{% url 'campus' %}">Campus <i class="fa fa-angle-down"></i></a>
                       <ul class="dropdown">
-                        <li><a href="{% url 'magazine' %}">Magazine</a></li>
-                        <li><a href="{% url 'placements' %}">Placements</a></li>
-                        
+                        <li>
+                          <a href="{% url 'magazine' %}">Magazine</a>
+                        </li>
+
                         <li>
                           <a href="{% url 'events' %}"> Events </a>
                         </li>
+
                         <li>
                           <a href="{% url 'gallery' %}"> Gallery </a>
                         </li>
+                        
                         <li>
                           <a href="{% url 'clubs' %}"> Clubs </a>
                         </li>
-                        <li>
-                          <a href="{% url 'nirf' %}"> NIRF </a>
-                        </li>
+
                         
                       </ul>
                     </li>
-                    <li class="static"><a class="mainNav" href="{% url 'jobs' %}">Jobs</a></li>
+                    <li>
+                      <a style="font-size:14px;" class="mainNav" href="{% url 'placements' %}">Placements</a>
+                    </li>
+                    <li class="static">
+                      <a style="font-size:14px;" class="mainNav" href="{% url 'jobs' %}">Jobs</a>
+                    </li>
                     
-                    <li><a class="mainNav tenders" href="{% url 'tenders' %}">Tenders</a></li>
+                    <li>
+                      <a style="font-size:14px;" class="mainNav tenders" href="{% url 'tenders' %}">Tenders</a>
+                    </li>
                     <!-- <li>
                         <a href="#">AIMS <i class="fa fa-user"></i></a>
                       </li> -->
@@ -1200,10 +1210,10 @@
   window.addEventListener('scroll',function(){
   $('.header-area').css('display','block');
   let header = document.querySelector('header');
-  let windowPosition = window.scrollY>400;
+  let windowPosition = window.scrollY>100;
   let windowSize = $(window).width();
   header.classList.toggle('scrolling-active',windowPosition);
-  if(window.scrollY>400){
+  if(window.scrollY>100){
     $('.mainNav').css('color','#000');
     $('.mainNav').css('margin-right','10px');
     $('.mainNav').css('padding-bottom','32px');
