Font Noto Serif added throughout, IIIT Dharwad homescreen div corrected and IIIT Dharwad animation corrected

--- a/iiitdsite/templates/iiitdsite/magazine.html
+++ b/iiitdsite/templates/iiitdsite/magazine.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-3">
                     <br>
-                    <h5>About Kaliedoscope</h5>
+                    <h5><b>About Kaliedoscope</b></h5>
                     <p>‘Kaleidoscope’, the institute magazine of IIIT Dharwad strives to bring to the limelight the creative writing and technical insights of our students and faculty members. We also get guest articles from experts in the industry and make it a point to publish them every month to help our students understand the industrial requirements and milieu. We are incalculably happy to present the magazine through the website of IIIT Dharwad.
                     </p>
 					<br>
