--- a/iiitdsite/templates/iiitdsite/index.html
+++ b/iiitdsite/templates/iiitdsite/index.html
@@ -374,8 +374,8 @@
     margin-right: -30px;
     animation: text 1.2s ;
     font-family: 'Poppins', sans-serif;
-    padding-right: 7px;
-    padding-left: 7px;
+    padding-right: 20px;
+    padding-left: 20px;
     margin-right: -20px;
   
 }
@@ -590,8 +590,10 @@
       margin-right: -30px;
       animation: text 1.2s ;
       font-family: 'Poppins', sans-serif;
-      padding-right: 7px;
-      padding-left: 7px;
+      /* padding-right: 7px;
+      padding-left: 7px; */
+      padding-right: 20px;
+      padding-left: 20px;
       margin-right: -20px;
       /* animation-delay: 2s; */
   }
@@ -857,6 +859,10 @@
       .show{
         height: 180px;
       }
+
+      body{
+        font-family: 'Noto Serif', serif;
+      }
     </style>
   </head>
 
@@ -868,7 +874,7 @@
         <div class="I3"></div>
         <div class="T"></div>
         <div class="Tbar"></div>
-        <div class="dharwad">D H A R W A D</div>
+        <div class="dharwad">D  H  A  R  W  A  D</div>
         <div class="box1"></div>
         <div class="box2"></div>
         <div class="box3"></div>
@@ -1190,6 +1196,7 @@
     }
     
   }
+
   </style>
   <script>
   window.addEventListener('DOMContentLoaded',()=>{
@@ -1251,7 +1258,7 @@
       </video>
       <div class="overlay">
         <div class="overlay-2"></div>
-        <div class="text-title container" style="text-align: center;">
+        <div class="text-title" style="text-align: center; width: 100%;">
           <span>Welcome to</span>
           <br>
           <span>Indian Institute of Information Technology<br>Dharwad</span>
