--- a/static/iiitdsite/css/style.css
+++ b/static/iiitdsite/css/style.css
@@ -1,13 +1,16 @@
 /* Imported CSS */
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,900");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 /* End Imported CSS*/
 
 /* Default CSS*/
 body {
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
+  font-family: 'Noto Serif', serif;
   overflow-x: hidden;
   font-size: 15px;
   color: #333;
+  text-align: justify;
   /* height: 100%; */
   /* margin: 0;
   padding: 0; */
@@ -22,6 +25,7 @@ p {
   line-height: 1.7;
   margin: 0;
   font-size: 16px;
+  text-align: justify;
 }
 
 h1,
@@ -33,6 +37,7 @@ h6 {
   margin: 0;
   padding: 0;
 }
+
 
 input:focus,
 textarea:focus,
@@ -1457,7 +1462,8 @@ svg {
   box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.44);
   overflow: hidden;
   color: rgb(0, 0, 0);
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
+  font-family: 'Noto Serif', serif;
 }
 @media screen and (max-width: 375px) {
   .tile {
@@ -1566,7 +1572,8 @@ body {
 /* Font styles */
 
 #welcome {
-  font-family: "Roboto Slab", serif;
+  /* font-family: "Roboto Slab", serif; */
+  font-family: 'Noto Serif', serif;
   font-size: 2em;
 }
 
