Fixed card sizing in faculty page

--- a/iiitdsite/templates/iiitdsite/faculty.html
+++ b/iiitdsite/templates/iiitdsite/faculty.html
@@ -51,7 +51,7 @@
 			<div class="d-flex" style="flex-wrap: wrap;">
 				{% for member in csemembers %}
 				<a href="{{member.get_absolute_url}}" style="color: #333333;">
-					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem;">
+					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem; height: 20rem;">
 						<img src="{{member.image.url}}" class="card-img-top" alt="...">
 					<br>
 					<p class="card-text" style="text-align: center;"><b>{{member.name}}</b></p>
@@ -106,7 +106,7 @@
 			<div class="d-flex" style="flex-wrap: wrap;">
 				{% for member in dsaimembers %}
 				<a href="{{member.get_absolute_url}}" style="color: #333333;">
-					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem;">
+					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem; height: 20rem;">
 						<img src="{{member.image.url}}" class="card-img-top" alt="...">
 					<br>
 					<p class="card-text" style="text-align: center;"><b>{{member.name}}</b></p>
@@ -162,7 +162,7 @@
 			<div class="d-flex" style="flex-wrap: wrap;">
 				{% for member in ecemembers %}
 				<a href="{{member.get_absolute_url}}" style="color: #333333;">
-					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem;">
+					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem; height: 20rem;">
 						<img src="{{member.image.url}}" class="card-img-top" alt="...">
 					<br>
 					<p class="card-text" style="text-align: center;"><b>{{member.name}}</b></p>
@@ -216,7 +216,7 @@
 			<div class="d-flex" style="flex-wrap: wrap;">
 				{% for member in humanitiesmembers %}
 				<a href="{{member.get_absolute_url}}" style="color: #333333;">
-					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem;">
+					<div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem; height: 20rem;">
 						<img src="{{member.image.url}}" class="card-img-top" alt="...">
 					<br>
 					<p class="card-text" style="text-align: center;"><b>{{member.name}}</b></p>
