--- a/iiitdsite/templates/iiitdsite/clubs.html
+++ b/iiitdsite/templates/iiitdsite/clubs.html
@@ -90,6 +90,10 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link 
+      rel="stylesheet" 
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" 
+    />
   </head>
 
   <body>
@@ -111,7 +115,14 @@
       .modal-open .modal{
         overflow-y: hidden;
       }
-      @media only screen and (max-width: 768px) {
+      .material-symbols-outlined {
+        font-variation-settings:
+        'FILL' 1,
+        'wght' 300,
+        'GRAD' 200,
+        'opsz' 48
+      }
+      @media only screen and (max-width: 770px) {
         .modal_header{
           display:flex;
           flex-direction: column;
@@ -130,10 +141,18 @@
           display:flex;
           flex-direction: column;
           width:100%;
+          gap:2rem;
           padding:2rem 1rem;
         }
+        .members{
+          display:flex;
+          flex-direction: column;
+          width:100%;
+          gap:2rem;
+          padding:1rem;
+        }
       }
-      @media only screen and (min-width: 768px) {
+      @media only screen and (min-width: 770px) {
         .modal_header{
           display:flex;
           justify-content: space-between;
@@ -153,6 +172,12 @@
           height:100%;
           align-items: center;
         }
+        .members{
+          display:flex;
+          flex-wrap: wrap;
+          width:100%;
+          padding:1rem;
+        }
       }
       .modal-dialog{
         display:flex;
@@ -165,10 +190,12 @@
       }
       .modal-content{
         width:min(50rem,100%);
+        height:100%;
       }
       .roles{
         display:flex;
         flex-direction: column;
+        flex: 0 0 33.333333%;
         align-items: center;
       }
       h3{
@@ -176,12 +203,15 @@
         font-weight: 500;
       }
       h4{font-size: 18px;}
-      .members{
-        display:flex;
-        flex-wrap: wrap;
-        width:100%;
-        padding:1rem;
-        gap:2rem;
+      .round{
+        height:10rem;
+        width:10rem;
+        border-radius:10rem;
+        /* box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px; */
+      }
+      .size-3xl{
+        color:rgb(110, 117, 122);
+        font-size: 10rem;
       }
     </style>
 
@@ -252,10 +282,27 @@
         </div>
         <div class="modal_important">
           {% for j in memb %}
+            {% if j.identifier == i.identifier and j.Post == "Faculty-Advisor" %}
+              <div class="roles">
+                {% if j.Photo %}
+                <img src="{{ j.Photo.url }}" class="card-img-top round" alt="...">
+                {% else %}
+                  <span class="size-3xl material-symbols-outlined">
+                    account_circle
+                  </span>
+                {% endif %}
+                <h3>{{ j.Name }}</h3>
+                <h4>{{ j.Post }}</h4>
+              </div>
+            {% endif %}
             {% if j.identifier == i.identifier and j.Post == "President" %}
               <div class="roles">
                 {% if j.Photo %}
-                <img src="{{ j.Photo.url }}" class="card-img-top" alt="...">
+                <img src="{{ j.Photo.url }}" class="card-img-top round" alt="...">
+                {% else %}
+                  <span class="size-3xl material-symbols-outlined">
+                    account_circle
+                  </span>
                 {% endif %}
                 <h3>{{ j.Name }}</h3>
                 <h4>{{ j.Post }}</h4>
@@ -264,16 +311,11 @@
             {% if j.identifier == i.identifier and j.Post == "Vice-President" %}
               <div class="roles">
                 {% if j.Photo %}
-                <img src="{{ j.Photo.url }}" class="card-img-top" alt="...">
-                {% endif %}
-                <h3>{{ j.Name }}</h3>
-                <h4>{{ j.Post }}</h4>
-              </div>
-            {% endif %}
-            {% if j.identifier == i.identifier and j.Post == "Faculty-Advisor" %}
-              <div class="roles">
-                {% if j.Photo %}
-                <img src="{{ j.Photo.url }}" class="card-img-top" alt="...">
+                <img src="{{ j.Photo.url }}" class="card-img-top round" alt="...">
+                {% else %}
+                  <span class="size-3xl material-symbols-outlined">
+                    account_circle
+                  </span>
                 {% endif %}
                 <h3>{{ j.Name }}</h3>
                 <h4>{{ j.Post }}</h4>
@@ -281,13 +323,17 @@
             {% endif %}
           {% endfor %}
         </div>
-        <h3>Members</h3>
+        <h3 style="padding-left:1rem">Members</h3>
         <div class="members">
           {% for j in memb %}
           {% if j.Post == "Member" %}
           <div class="roles">
             {% if j.Photo %}
             <img src="{{ j.Photo.url }}" class="card-img-top" alt="...">
+            {% else %}
+            <span class="size-3xl material-symbols-outlined">
+              account_circle
+            </span>
             {% endif %}
             <h3>{{ j.Name }}</h3>
             <h4>{{ j.Post }}</h4>
@@ -295,6 +341,9 @@
           {% endif %}
           {% endfor %}
         </div>
+      </div>
+      <div class="modal-footer">
+        <a href="{{ i.Website }}" class="btn btn-primary" data-dismiss="modal">Check Website</a>
       </div>
     </div>
   </div>
