changed the DHARWAD text in IIITDWD Logo animation from text to image

--- a/iiitdsite/templates/iiitdsite/index.html
+++ b/iiitdsite/templates/iiitdsite/index.html
@@ -393,6 +393,19 @@
 
 
 
+@keyframes dwdImg {
+    0% {
+      width: 0%;
+      
+    }
+    85% {
+      width: 0%;
+    }
+    100% {
+      width: 40%;
+    }
+  }  
+
 @keyframes text {
     0% {
       height: 0px;
@@ -828,7 +841,8 @@
               <div class="second3"></div>
             </div>
           </div>
-          <div class="dharwad">D H A R W A D</div>
+          <!-- <div class="dharwad">D H A R W A D</div> -->
+          <img src="/static/iiitdsite/images/DHARWAD_iiitdwdLogo.png" style="width: 40%; animation: dwdImg 1.2s;">
           <div class="vikas">ज्ञानेन विकास:</div>
         </div>
       </div>
